-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b14
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2225818 | 8 | Bengt Rutisson | P4 | Resolved | Fixed | b44 |
| JDK-8018252 | 7u45 | Bengt Rutisson | P4 | Closed | Fixed | b01 |
| JDK-8002557 | 7u40 | Bengt Rutisson | P4 | Closed | Fixed | b01 |
The test lowers the notification threshold for the G1 old gen memory pool and expects to get a notification after a full GC.
The problem in G1 is that the decision to send the notification is done in TraceMemoryManagerStats::~TraceMemoryManagerStats(). This eventually does pool->get_memory_usage() to get the memory usage after a collection. The problem is that we update this information in G1MonitoringSupport::update_sizes() which is called in G1CollectedHeap::do_collection() _after_ the TraceMemoryManagerStats scope had been exited.
Extending the scope to cover the call to G1MonitoringSupport::update_sizes() solves the issue.
- backported by
-
JDK-2225818 G1: java/lang/management/MemoryMXBean/CollectionUsageThreshold.java failes with G1
-
- Resolved
-
-
JDK-8002557 G1: java/lang/management/MemoryMXBean/CollectionUsageThreshold.java failes with G1
-
- Closed
-
-
JDK-8002558 G1: java/lang/management/MemoryMXBean/CollectionUsageThreshold.java failes with G1
-
- Closed
-
-
JDK-8018252 G1: java/lang/management/MemoryMXBean/CollectionUsageThreshold.java failes with G1
-
- Closed
-
- relates to
-
JDK-7067973 test/java/lang/management/MemoryMXBean/CollectionUsageThreshold.java hanging intermittently
-
- Resolved
-
-
JDK-8029631 CollectionUsageThreshold.java fails with -XX:+UseG1GC -XX:+ExplicitGCInvokesConcurrent
-
- Closed
-