7173460: G1: java/lang/management/MemoryMXBean/CollectionUsageThreshold.java failes with G1

The scope of TraceMemoryManagerStats in G1CollectedHeap need to cover the call to G1MonitoringSupport::update_sizes()

Reviewed-by: johnc, jmasa